--- a/source/_posts/有限域.md
+++ b/source/_posts/有限域.md
@@ -44,7 +44,7 @@ tags:
 
 例如，如果我们使用`R`作为构造多项式的域，那么`x^2+1`、`x+2`、`3.14x^2-2.72x+1.41`等都属于`R[x]`。同整数一样，多项式也可以有加法和乘法运算，但不总是有除法运算，比如无法得出`(x^2+1)/(x+2)`的结果，因此`R[x]`并不是一个域，因为`1/(x+2)`可以看成是`(x+2)`的逆元，但是并不属于`R[x]`中。
 
-然后，正如整数模上任意一个素数构成的集合可以构成一个域，**多项式模上一个素多项式构成的集合可以构成域**
+然而，正如整数模上任意一个素数构成的集合可以构成一个域，**多项式模上一个素多项式构成的集合可以构成域**
 
 **素多项式（`prime polynomial`）：系数为整数并且不能被因式分解成低阶多项式。**比如上面的`x^2+1`，在实数范围内不可被因式分解。因此，`R[x]/(x^2+1)`就是一个域，这个域中的多项式中`x`的最高次幂最大只能是`1`
 
@@ -197,3 +197,10 @@ func (f *Field) Inv(x byte) byte {
 	return f.Exp(255 - f.Log(x))
 }
 ```
+
+
+
+### 参考
+
+- [Finite Field Arithmetic and Reed-Solomon Coding](<https://research.swtch.com/field>)
+
