--- a/source/_posts/协程抢占.md
+++ b/source/_posts/协程抢占.md
@@ -13,7 +13,7 @@ tags:
 
 ##### morestack：执行抢占
 
-目前`go`实现是的协作抢占：在每个函数开头插入`runtime.morestack_noctxt`方法，除了检查是否需要扩张栈，同时还检查是否需要当前协程需要抢占。那么怎么判断一个协程是否需要抢占呢？后台线程会定时扫描当前运行中的协程，如果发现一个协程运行比较久，会将其标记为抢占状态。
+目前`go`实现是的协作抢占：在每个函数开头插入`morestack`检查，除了检查是否需要扩张栈，同时还检查是否当前协程需要抢占。那么怎么判断一个协程是否需要抢占呢？后台线程会定时扫描当前运行中的协程，如果发现一个协程运行比较久，会将其标记为抢占状态。
 
 我们首先看一下一个`main`函数的汇编代码：
 
