--- a/source/_posts/数值表示.md
+++ b/source/_posts/数值表示.md
@@ -176,6 +176,58 @@ tags:
 因为 `-1≡255 mod 256`，在8位的带符号数中，我们可以用11111111<sub>b</sub>来表示`-1`，而这不正是`-1`的补码吗。
 
 
+### 应用
+前面讲到，计算机中使用补码存储整数，而我们可以把补码看成是一个环
+因此：
+```go
+  a := uint8(2)
+  b := uint8(255)
+  a - b == 3 // 2倒退3步回到255
+```
+
+利用这个性质，当我们在实现环形队列时：
+```go
+type RingQueue struct {
+	buf        []interface{}
+	head, tail uint32
+	cap        uint32
+}
+
+func New(cap uint32) *RingQueue {
+	return &RingQueue{
+		buf: make([]interface{}, cap),
+		cap: cap,
+	}
+}
+
+func (r *RingQueue) Push(v interface{}) bool {
+	if r.tail-r.head < r.cap {
+		r.buf[r.tail%r.cap] = v
+		r.tail++
+		return true
+	}
+	return false
+}
+
+func (r *RingQueue) Size() uint32 {
+	return r.tail - r.head
+}
+
+func (r *RingQueue) Cap() uint32 {
+	return r.cap
+}
+
+func (r *RingQueue) Pop() (interface{}, bool) {
+	if r.tail-r.head > 0 {
+		v := r.buf[r.head%r.cap]
+		r.head++
+		return v, true
+	}
+	return nil, false
+}
+```
+
+
 
 ### 参考
 - [原码、反码和补码详解](https://www.cnblogs.com/zhangziqiu/archive/2011/03/30/computercode.html)
