--- a/source/_posts/二分查找.md
+++ b/source/_posts/二分查找.md
@@ -2,9 +2,10 @@
 title: 搞定二分查找
 date: 2020-04-13 14:32:02
 tags:
-    - leetcode	 
-	- 二分查找
+	- leetcode
+	- binarySearch
 ---
+
 二分查找是分治法的一个典型应用，通过二分查找，可以在O(logN)时间复杂度中从一个有序的数组中找出指定的元素。这也是面试中经常遇到的题目，今天就来看一下二分查找的一些变形题。
 
 ### [leetcode 704：二分查找](https://leetcode-cn.com/problems/binary-search/)
